--- a/my-personal-blog/package.json
+++ b/my-personal-blog/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^3.3.1",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^15.0.1",
